# GameEngine

./: CMakeLists.txt  GameEngine.h  README.md  setup.sh
Core/: CMakeLists.txt  Core.cpp  Core.h
Core/events/: TickEventInterface.cpp  TickEventInterface.h
Core/interfaces/: Animation.cpp  Animation.h  ArtificialInteligense.cpp  ArtificialInteligense.h  Audio.cpp  Audio.h  Debug.cpp  Debug.h  FrontEnd.cpp  FrontEnd.h  GamePlay.cpp  GamePlay.h  GuiRenderCommand.cpp  GuiRenderCommand.h  Input.cpp  Input.h  NetWork.cpp  NetWork.h  Physics.cpp  Physics.h  Render.cpp  Render.h  Resources.cpp  Resources.h  VisualEfects.cpp  VisualEfects.h
Core/utils/: Actor.h  Buffer.cpp  Buffer.h  BufferItem.h  LongString.cpp  LongString.h  Material.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  Mesh.h  Shader.h  ShortString.cpp  ShortString.h  String.cpp  String.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Debugging/: CMakeLists.txt  ConsoleOutput.cpp  ConsoleOutput.h
Examples/: CMakeLists.txt
Examples/Buffer/: CMakeLists.txt  main.cpp
Examples/Factory/: CMakeLists.txt  main.cpp  shader_file_path.h.in
Examples/Factory/InputCommands/: ExitCommand.cpp  ExitCommand.h  TickEvent.cpp  TickEvent.h
Examples/Factory/shaders/: simpleTest.frag  simpleTest.vert
Examples/GUIExample/: CMakeLists.txt  main.cpp  shader_file_path.h.in
Examples/GUIExample/shaders/: simpleTest.frag  simpleTest.vert
Examples/MatrixExample/: CMakeLists.txt  main.cpp
Examples/Render/: CMakeLists.txt  main.cpp
Examples/Render/InputCommands/: ExitCommand.cpp  ExitCommand.h  PrintCommand.cpp  PrintCommand.h
Examples/Render/shaders/: simpleTest.vert
Examples/Simple/: CMakeLists.txt
Examples/StringExample/: CMakeLists.txt  main.cpp
Examples/Template/: CMakeLists.txt  main.cpp
Examples/VectorExample/: CMakeLists.txt  main.cpp
HID/: CMakeLists.txt  SDLInputSystem.cpp  SDLInputSystem.h
HID/GUI/: GUIEvent.h  GUISystem.cpp  GUISystem.h  Window.cpp  Window.h  nuklear.h  nuklear_sdl_gl3.h  overview.c
HID/shaders/: guiCircleMap.frag  guiCircleMap.vert
HID/utils/: ExitCommand.cpp  ExitCommand.h  GuiConfig.h
Low-Level-Rendering/: CMakeLists.txt  RenderSystem.cpp  RenderSystem.h  SDLRenderSystem.cpp  SDLRenderSystem.h  ShaderFactory.cpp  ShaderFactory.h
Low-Level-Rendering/renderingPipe/: ShaderStrategy.cpp  ShaderStrategy.h
Low-Level-Rendering/renderingPipe/renderingStrategies/: SimpleShader.cpp  SimpleShader.h
Low-Level-Rendering/utils/: Camera.cpp  Camera.h  Material.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  Scene.cpp  Scene.h  Shader.h
Resources/: PersistentData.cpp  PersistentData.h
Resources/Importers/Models/: test
Resources/Importers/Models/FBXBinary/: BinaryNode.cpp  BinaryNode.h  BinaryProperty.cpp  BinaryProperty.h  FBXImporter.cpp  FBXImporter.h  test  test.cpp  test.fbx
cmake/: FindGLEW.cmake  FindLibRocket.cmake  FindOpenGL.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
