cmake_minimum_required(VERSION 3.5)

project (EngineExamples)

add_subdirectory("${PROJECT_SOURCE_DIR}/Simple")
add_subdirectory("${PROJECT_SOURCE_DIR}/VectorExample")
add_subdirectory("${PROJECT_SOURCE_DIR}/MatrixExample")
add_subdirectory("${PROJECT_SOURCE_DIR}/StringExample")
add_subdirectory("${PROJECT_SOURCE_DIR}/Render")